# 3ddl

./: .gitignore  AGENTS.md  README.md
docs/: 3ddl_acceleration_report.md  INDEX.md  README.md  current_status.md  decision_log.md  experiment_registry.md  metrics_definition.md  pipeline_demo_walkthrough.md  project_overview.md  publication_strategy.md  roadmap.md
docs/formal_report/: 3ddl_acceleration_report_submission.tex  README.md  abstract.tex  acknowledgements.tex  body.tex  build_report.py  declaration.tex  submission_source.md
docs/optimization_history/: 000_baseline_pipeline.md  010_model_compression_summary.md  011_structured_pruning.md  012_finetuning_pruned_model.md  013_onnx_export_and_engine_build.md  014_single_patch_benchmarks.md  020_trt_fp16_integration.md  030_pipeline_io_optimization.md  031_combined_seg_metrology_default.md  032_report_without_bbox_nifti.md  033_gltf_without_bbox_pred_nifti.md  034_larger_direct_roi_experiment.md  040_batch_inference.md  (+17 more)
intelliscan/: .env.example  .gitignore  README.md  detection.py  files.example.txt  gltf_utils.py  main.py  merge.py  metrology.py  pyproject.toml  report.py  segmentation.py  utils.py
intelliscan/output_smoke/: .pipeline_logbook.json
intelliscan/output_smoke/images/: metrics.json
intelliscan/scripts/: benchmark_runtime_candidates.py  benchmark_seg_met_stage.py  compare_ablation_outputs.py  run_batch_multi_gpu.py
scripts/: generate_paper_demo_assets.py  int8_pipeline_eval.py  new_experiment_doc.sh  regenerate_figures.py  repeated_benchmark.py  teacher_fp16_benchmark.py
wp5-seg/: train.py
(+208 files in other folders)
